src/test/deca/context/valid/Objet/class_comp1.deca
// Description:
//    test d'égalite de deux variables de la même classe
//
// Resultats:
//   
//
// Historique:
//    cree le 18/01/2022

class A {
    int i ;
}

{
    boolean c ;
    A a = new A() ;
    A b = new A() ;
    c = (a == b) ;
}