src/test/deca/context/invalid/Objet/sameName_field_class.deca
// Description:
//    essayer de déclarer deux champs de même nom dans une classe
//
// Resultats:
//  12:8:  The identifier i is already used for  a  method or a field in the same class
//
// Historique:
//    cree le 20/01/2022

class A  {
    float i ;
    int i ;

}


{}



